@@ -1,3 +1,11 @@
+2008-05-09  Philip Van Hoof  <pvanhoof@gnome.org>
+
+	* src/trackerd/tracker-db-sqlite.c:
+	* src/libtracker-db/tracker-db-interface.h:
+	* src/libtracker-db/tracker-db-interface-sqlite.c:
+	* src/libtracker-db/tracker-db-interface.c: Improvement for queries
+	that have no reply
+
 2008-05-09  Ivan Frade  <ivan.frade@nokia.com>
 
 	* src/libtracker-common/tracker-config.c
